# score

src/addons/: CMakeLists.txt
src/plugins/score-plugin-fx/Fx/: FactorOracle2.hpp  FactorOracle2MIDI.hpp
